--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
   "name": "Dodge-Bc",
   "short_name": "Dodge-Bc",
-  "description": "Jogo de reflexo e coleta de blocos especiais com power-ups.",
+  "description": "Jogo de reflexo com obstáculos, power-ups e blocos especiais.",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#ff4d4d",
   "orientation": "portrait",
+  "lang": "pt-BR",
+  "categories": ["games"],
   "icons": [
     {
       "src": "cubo192.png",
@@ -17,6 +20,19 @@
       "src": "cubo512.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Jogar Dodge",
+      "url": "./index.html",
+      "icons": [
+        {
+          "src": "cubo192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
     }
   ]
 }
